ll-javaUtils/src/main/java/gov/va/med/lom/javaUtils/config/ConfigParser.java
/* Generated By:JavaCC: Do not edit this line. ConfigParser.java */

package gov.va.med.lom.javaUtils.config;
import java.util.*;

public class ConfigParser implements ConfigParserConstants {

    private String comments="";
    private ConfigFile configFile = null;

    public static void main(String args[])
    throws ParseException, ConfigException
    {
        ConfigParser parser = new ConfigParser(System.in);
        ConfigFile cf = new ConfigFile();
        parser.process(cf);
        cf.write(System.out);
    }

    public void process(ConfigFile configFile)
    throws ParseException, ConfigException
    {
        this.configFile = configFile;
        try {
            try {
                ParseConfigFile();
            } catch (TokenMgrError e) {
                throw generateParseException();
            }
        } catch (ParseException e) {
            System.err.println("Syntax error in config file at line " +
                e.currentToken.next.beginLine +
                ", column " + e.currentToken.next.beginColumn + ".");
            throw e;
        }
    }

    private static final boolean isodigit(char c) {
        switch (c) {
            case '0': case '1': case '2': case '3':
            case '4': case '5': case '6': case '7':
                return true;
        }
        return false;
    }

    private static final boolean isxdigit(char c) {
        switch (c) {
            case '0': case '1': case '2': case '3':
            case '4': case '5': case '6': case '7':
            case '8': case '9':
            case 'a': case 'b': case 'c': case 'd': case 'e': case 'f':
            case 'A': case 'B': case 'C': case 'D': case 'E': case 'F':
                return true;
        }
        return false;
    }

// PARSER SPECIFICATIONS BEGIN HERE
  final public void ParseConfigFile() throws ParseException, ConfigException {
            boolean done;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 0:
      case KEYWORD:
      case WHITESPACE:
      case COMMENT:
      case EOL:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      done = ConfigEntry();
                if (done) {if (true) return;}
    }
  }

  final public boolean ConfigEntry() throws ParseException, ConfigException {
            Token comment, kw, val, ws;
            String keyword=null;
            Vector vlist=null;
            boolean isArray=false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHITESPACE:
      comment = jj_consume_token(WHITESPACE);
                comments += comment.toString();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EOL:
      comment = jj_consume_token(EOL);
                comments += comment.toString();
      break;
    case COMMENT:
      comment = jj_consume_token(COMMENT);
                comments += comment.toString();
      break;
    case KEYWORD:
      kw = jj_consume_token(KEYWORD);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHITESPACE:
        jj_consume_token(WHITESPACE);
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 1:
        isArray = arraySpec();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case WHITESPACE:
          jj_consume_token(WHITESPACE);
          break;
        default:
          jj_la1[3] = jj_gen;
          ;
        }
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      jj_consume_token(ASSIGN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHITESPACE:
        jj_consume_token(WHITESPACE);
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case QSTRING:
      case STRING:
        vlist = ValueList();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(EOL);
                if (vlist == null) {
                    try {
                        if (isArray) {
                            configFile.addEntry(kw.image,
                                new String[0], comments);
                        } else {
                            configFile.addEntry(kw.image, "", comments);
                        }
                    } catch (KeywordValueException e) {
                        {if (true) throw new ConfigException(
                            "Key " + kw.image + " is not valid.");}
                    }
                } else {
                    Enumeration en = vlist.elements();
                    String[] values = new String[vlist.size()];
                    int pos = values.length - 1;
                    while (en.hasMoreElements()) {
                        values[pos--] = (String) en.nextElement();
                    }
                    try {
                        if (isArray) {
                            configFile.addEntry(kw.image, values, comments);
                        } else {
                            if (values.length != 1) {
                                {if (true) throw new ConfigException(
                                    "Key " + kw.image +
                                    " is not a list.  Use " +
                                    kw.image +"[]");}
                            }
                            configFile.addEntry(kw.image, values[0], comments);
                        }
                    } catch (KeywordValueException e) {
                        {if (true) throw new ConfigException(
                            "Key " + kw.image + " is not valid.");}
                    }
                }
                comments = "";
      break;
    case 0:
      jj_consume_token(0);
                try {
                    // FIX - should really be addTrailingComment
                    configFile.addEntry(ConfigFile.TRAILING_COMMENT,
                            (String[])null, comments);
                } catch (KeywordValueException e) {
                    System.err.println("ConfigFile unable to add entry for "
                            + ConfigFile.TRAILING_COMMENT + ".");
                }
                comments = "";
                {if (true) return true;} // EOF reached - finished parsing.

      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return false;} // Not done until EOF.

    throw new Error("Missing return statement in function");
  }

  final public Vector ValueList() throws ParseException {
            String      sval=null;
            Vector      vlist=null;
    sval = Value();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHITESPACE:
        jj_consume_token(WHITESPACE);
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      vlist = ValueList();
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
        if (vlist == null) {
            vlist = new Vector();
            vlist.addElement(sval);
        } else {
            vlist.addElement(sval);
        }
        {if (true) return vlist;}
    throw new Error("Missing return statement in function");
  }

  final public String Value() throws ParseException {
            String lhs="", rhs="";
    lhs = ValueFragment();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      jj_consume_token(PLUS);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHITESPACE:
        jj_consume_token(WHITESPACE);
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      rhs = Value();
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
            {if (true) return lhs + rhs;}
    throw new Error("Missing return statement in function");
  }

  final public String ValueFragment() throws ParseException {
            Token val;
            String sval;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QSTRING:
      sval = QuotedString();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHITESPACE:
        jj_consume_token(WHITESPACE);
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
            {if (true) return sval;}
      break;
    case STRING:
      val = jj_consume_token(STRING);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHITESPACE:
        jj_consume_token(WHITESPACE);
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
            {if (true) return val.image;}
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public boolean arraySpec() throws ParseException {
            String lhs="", rhs="";
    jj_consume_token(1);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHITESPACE:
      jj_consume_token(WHITESPACE);
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    jj_consume_token(2);
            {if (true) return true;}
    throw new Error("Missing return statement in function");
  }

  final public String QuotedString() throws ParseException {
            Token qs;
            StringBuffer sbuf;
            int i;
            char[] cbuf;
    qs = jj_consume_token(QSTRING);
        sbuf = new StringBuffer();
        cbuf = qs.image.toCharArray();
        for (i=1; i < (cbuf.length - 1); i++) {
            switch (cbuf[i]) {
                case '\\':
                    switch (cbuf[i+1]) {
                        case 'n':
                            sbuf.append("\n"); i += 1; break;
                        case 't':
                            sbuf.append("\t"); i += 1; break;
                        case 'b':
                            sbuf.append("\b"); i += 1; break;
                        case 'r':
                            sbuf.append("\r"); i += 1; break;
                        case 'f':
                            sbuf.append("\f"); i += 1; break;
                        case 'u':
                            if ((cbuf.length - i >= 6) &&
                                (isxdigit(cbuf[i+2])) &&
                                (isxdigit(cbuf[i+3])) &&
                                (isxdigit(cbuf[i+4])) &&
                                (isxdigit(cbuf[i+5]))) {
                                try {
                                    String s = new String(cbuf, i+2, 4);
                                    int val = Integer.parseInt(s, 16);
                                    sbuf.append((char)val);
                                    i += 5;
                                } catch (Throwable t) {
                                    sbuf.append(cbuf[i+1]);
                                    i += 1;
                                }
                            } else {
                                sbuf.append(cbuf[i+1]);
                                i += 1;
                            }
                            break;
                        case 'x':
                            if ((cbuf.length - i >= 4) &&
                                (isxdigit(cbuf[i+2])) &&
                                (isxdigit(cbuf[i+3]))) {
                                try {
                                    String s = new String(cbuf, i+2, 2);
                                    int val = Integer.parseInt(s, 16);
                                    sbuf.append((char)val);
                                    i += 3;
                                } catch (Throwable t) {
                                    sbuf.append(cbuf[i+1]);
                                    i += 1;
                                }
                            } else {
                                sbuf.append(cbuf[i+1]);
                                i += 1;
                            }
                            break;
                        default:
                            if ((cbuf.length - i >= 4) &&
                                (isodigit(cbuf[i+1])) &&
                                (isodigit(cbuf[i+2])) &&
                                (isodigit(cbuf[i+3]))) {
                                try {
                                    String s = new String(cbuf, i+1, 3);
                                    int val = Integer.parseInt(s, 8);
                                    sbuf.append((char)val);
                                    i += 3;
                                } catch (Throwable t) {
                                    sbuf.append(cbuf[i+1]);
                                    i += 1;
                                }
                            } else {
                                sbuf.append(cbuf[i+1]);
                                i += 1;
                            }
                            break;
                    } // inner switch
                    break;
                default:
                    sbuf.append(cbuf[i]);
                    break;
            } // outer switch
        } // outer for
        {if (true) return sbuf.toString();}
    throw new Error("Missing return statement in function");
  }

  public ConfigParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  public Token token, jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[16];
  final private int[] jj_la1_0 = {0xb9,0x10,0x10,0x10,0x2,0x10,0x300,0xa9,0x10,0x1000,0x10,0x800,0x10,0x10,0x300,0x10,};

  public ConfigParser(java.io.InputStream stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ConfigParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  public void ReInit(java.io.InputStream stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  public ConfigParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ConfigParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  public ConfigParser(ConfigParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  public void ReInit(ConfigParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  final private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  final private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.Vector jj_expentries = new java.util.Vector();
  private int[] jj_expentry;
  private int jj_kind = -1;

  final public ParseException generateParseException() {
    jj_expentries.removeAllElements();
    boolean[] la1tokens = new boolean[15];
    for (int i = 0; i < 15; i++) {
      la1tokens[i] = false;
    }
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 16; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 15; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.addElement(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.elementAt(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  final public void enable_tracing() {
  }

  final public void disable_tracing() {
  }

}

class ConfigElement {
    /**
     * Comments for this element.
     */
    public      String          comments;


    /**
     * Key name for this key.
     */
    public      String          key;

    /**
     * Array of zero or more values assigned to key.
     */
    public      String[]        values;
}
